--- a/report.tex
+++ b/report.tex
@@ -41,7 +41,7 @@
 
 
 \usepackage{hyperref}
-\hypersetup{colorlinks=true,citecolor=darkred, urlcolor=darkred}
+\hypersetup{colorlinks=true,linkcolor=black,urlcolor=darkred,citecolor=black}
 \usepackage{url}
 \usepackage{float}
 % ------------------------------------------------------------------------------
