--- a/08-results.tex
+++ b/08-results.tex
@@ -42,7 +42,7 @@ The output results of the both the white box and black box test are given in app
 \subsection{Visualization} % (fold)
 \label{sub:visualization}
 
-The raft implementation, raft simulator and command line visualization are seperated in three reuseable compontens. This means that a another GUI visualization such as in a browser would be easy as the raw raft implementation and simulator can be reused together with a browser visualization module.
+The raft implementation, raft simulator and command line visualization are seperated in three reuseable components. This means that a another GUI visualization such as in a browser would be easy as the raw raft implementation and simulator can be reused together with a browser visualization module.
 
 The command line visualization is implemented using an HTTP-server that runs with the raft visualization process. To manipulate with the visualization the raft client sends an HTTP-request, which the command server receives and invokes the relevant method on the visualization process.
 
