--- a/01-introduction.tex
+++ b/01-introduction.tex
@@ -3,9 +3,9 @@
 \section{Introduction} % (fold)
 \label{sec:introduction}
 
-This is the final report for the project in the course ``Fault tolerant systems'' (02228). The purpose of this project is to document our experience in implementing Raft - a consensus algorithm. Our approach to this is use the specification of the Raft paper~\cite[p.~4]{Raft} and iteratively construct a test for each behaviour the algorithm should have and implement its functionality that satisfies the given test.
+This is the final report for the project in the course ``Fault tolerant systems'' (02228). The purpose of this project is to learn document our experience in implementing Raft - a consensus algorithm. Our approach to this is use the specification of the Raft paper~\cite[p.~4]{Raft} and iteratively construct a test for each behaviour the algorithm should have and implement its functionality that satisfies the given test.
 
-IN this introductory section we will present he fundamental problem when talking about consensus in a distributed system with a basic description of the Raft algorithm.
+In this introductory section we will present the fundamental problem when talking about consensus in a distributed system with a basic description of the Raft algorithm.
 
 \subsection{Problem}
 Reaching consensus in a distributed system means that all processes in the network eventually agree on some value or state of the entire system. This is often needed when processes might be faulty thus bringing reliability and availability at stake on single-point-of-failure. Upholding these properties in a given distributed system then relies on the architecture utilised and hardware implemented in the processes.
@@ -28,13 +28,13 @@ The fundamental problem behind this is that you cannot rely on the individual pr
 \subsection{Motivation} % (fold)
 \label{sub:motivation}
 
-The elements of the problem presented serve as motivation behind consensus in a system of unreliable components. Because how do you rely on a value in a system, where some components will eventually be faulty? The basic problem of reaching consensus in a distributed network can be illustrated by the Two Generals Problem analogy.
+The elements of the problem presented serve as motivation behind consensus in a system of unreliable components. Because how do you rely on a value in a system where some components will eventually be faulty? The basic problem of reaching consensus in a distributed network can be illustrated by the Two Generals Problem analogy.
 
 \subsubsection{Two Generals Problem} % (fold)
 \label{ssub:two_generals_problem}
 
-In figure~\ref{generals} is an illustration of two generals from the same army who want to attack an enemy army and they have to attack at the same time in order to win. They cannot communicate directly to each other since they are at different fronts of the battlefield. In the context of a distributed system the generals here can be seen as two processes trying to agree on a value.
-General 1 sends out a messenger to tell the second general that they should attack at dawn. The second general then receives this message, but the first general cannot be sure of this (the messenger might be captured or killed by the enemy on his way to the second general and vice versa). Again, in the context of distributed system, the unreliability of messenger can directly related back to the unreliability of message transmission in a normal distributed system.
+Figure~\ref{generals} is an illustration of two generals from the same army who want to attack an enemy army and they have to attack at the same time in order to win. They cannot communicate directly to each other since they are at different fronts of the battlefield. In the context of a distributed system the generals here can be seen as two processes trying to agree on a value.
+General 1 sends out a messenger to tell the second general that they should attack at dawn. The second general then receives this message, but the first general cannot be sure of this (the messenger might be captured or killed by the enemy on his way to the second general and vice versa). Again, in the context of distributed system, the unreliability of messenger can directly related back to the unreliability of message transmission in a normal distributed system~\cite{Byzantine}.
 
 \begin{figure}[h]
 	\centering
