--- a/report.tex
+++ b/report.tex
@@ -169,16 +169,17 @@
 \include{00-preface}
 \tableofcontents
 \thispagestyle{empty}       % Remove page numbering on this page
-\include{01-introduction}
-\include{02-raft}
-\include{03-requirements}
-\include{04-analysis}
-\include{05-leader_election}
-\include{06-log_replication}
-\include{07-evaluation_testing}
-\include{08-results}
-\include{09-discussion}
-\include{10-conclusion}
+\newpage
+\input{01-introduction}
+\input{02-raft}
+\input{03-requirements}
+\input{04-analysis}
+\input{05-leader_election}
+\input{06-log_replication}
+\input{07-evaluation_testing}
+\input{08-results}
+\input{09-discussion}
+\input{10-conclusion}
 
 \bibliography{references}{}
 \bibliographystyle{plain}
