--- a/references.bib
+++ b/references.bib
@@ -95,3 +95,22 @@ month={Aug},
 pages={383-387},
 keywords={software prototyping;BDD approach;BDD characteristics;agile development approach;behaviour driven development;Boolean functions;Business;Context;Data structures;Programming;Software;Testing;Automated Acceptance Testing;Behaviour Driven Development;Test Driven Development;Ubiquitous Language},
 }
+
+@article{Byzantine,
+ author = {Lamport, Leslie and Shostak, Robert and Pease, Marshall},
+ title = {The Byzantine Generals Problem},
+ journal = {ACM Trans. Program. Lang. Syst.},
+ issue_date = {July 1982},
+ volume = {4},
+ number = {3},
+ month = jul,
+ year = {1982},
+ issn = {0164-0925},
+ pages = {382--401},
+ numpages = {20},
+ url = {http://doi.acm.org/10.1145/357172.357176},
+ doi = {10.1145/357172.357176},
+ acmid = {357176},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
