Fixed intro figure

--- a/01-introduction.tex
+++ b/01-introduction.tex
@@ -14,7 +14,7 @@ A simple solution to this could be to initiate a vote among all correct processe
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.5\textwidth]{consensus}
+	\includegraphics[width=0.5\textwidth]{system-example}
 	\caption{A distributed system consisting of a number of nodes with a faulty one.}
 	\label{consensus}
 \end{figure}
