New frontpage image

--- a/report.tex
+++ b/report.tex
@@ -162,7 +162,7 @@
   	\author{Joachim Kirkegaard Friis s093256 \\ Anders Nielsen s103457 \\ \vspace{0.2cm} \today}
   		\begin{figure}[h]
   	  		\centering
-  	  		\includegraphics[width=1\textwidth]{frontpage}
+  	  		\includegraphics[width=0.85\textwidth]{figures/frontpage.pdf}
   	  	\end{figure}
 \printauthor								% Print the author data as defined above
 \newpage
